# zero2prod

./: .env  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20221107084925_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telementary.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
