[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Taaha <taaha827@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path= "src/main.rs"
name="zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"]}
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.7", default-features = false, features = ["runtime-actix-rustls","macros","postgres","uuid","chrono","migrate"]}
config = "0.11"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
